--- a/main.scss
+++ b/main.scss
@@ -11,6 +11,7 @@
         clip-path: circle(25% at 40% 26%) ;
         transition: all .5s ease-in-out;
         cursor: pointer;
+        text-align: justify;
 
         &:hover{
             clip-path: circle(75%);
@@ -43,6 +44,7 @@
             font-size: 1.3rem;
         }
     }
+
     .inner_func{
         background: white;
         padding: 1em;
@@ -51,6 +53,7 @@
         clip-path: inset(0px 0px 210px 0px round 20px);
         transition: all .5s ease-in-out;
         cursor: pointer;
+        text-align: justify;
 
         &:hover{
             clip-path: inset(0px 0px 0px 0px);
@@ -84,7 +87,78 @@
         }
     }
 
-    
+    .inner_proc{
+        background: white;
+        padding: 2em;
+        border-radius: 10px;
+        width: 30%;
+        clip-path: inset(0px 0px 0px 0px round 20px);
+        transition: all .5s ease-in-out;
+        text-align: justify;
+        
+        
 
+        &:hover{
+            
+            background: white;
+        }
+
+        h3{
+            color: #b565ff;
+            margin: 0;
+            font-size: 25px;
+            margin-bottom: 10px;
+        }
+
+        img {
+            margin: 0 auto;
+            width: 48%;
+            transition: color .5s;
+            position: relative;
+            margin-bottom: 30px;
+            margin-top: 15px;
+            margin-left: 37px;
+        }
+
+        &:hover img{
+            color: rgba(255,255,255,0);
+        }
+
+        p{
+            color: #b565ff;
+            font-size: 1.3rem;
+        }
+    }
+
+    .introduccion-izq{
+        background: white;
+        padding: 1.5em;
+        border-radius: 10px;
+        width: 85%;
+        clip-path: inset(0px 0px 0px 0px round 20px);
+        transition: all .5s ease-in-out;
+        color: #b565ff;
+    }
+
+    .caja_api{
+        background: white;
+        padding: 1.8em;
+        border-radius: 10px;
+        width: 100%;
+        clip-path: inset(0px 0px 0px 0px round 20px);
+        transition: all .5s ease-in-out;
+        color: #b565ff;
+        height: 480px;
+    }
+
+    .conclusion_p{
+        background: white;
+        padding: 1.5em;
+        border-radius: 10px;
+        width: 85%;
+        clip-path: inset(0px 0px 0px 0px round 20px);
+        transition: all .5s ease-in-out;
+        color: #b565ff;
+    }
    
 
