--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ header{
 
 .introduccion{
     display: flex;
+    justify-content: center;
 }
 
 .titulo_introduccion{
@@ -78,7 +79,7 @@ header{
 }
 .introduccion-izq{
     width: 100%;
-    padding: 60px 100px;
+    margin: 50px 0px 0px 0px;
     text-align: justify;
 }
 .introduccion-der{
@@ -137,7 +138,7 @@ header{
 
 .funcionamiento{
     background-color: white;
-    height: 100vh;
+    height: 1000px;
 }
 
 .titulo_funcionamiento{
@@ -208,13 +209,12 @@ header{
 .container_empezar{
     display: flex;
     flex-direction: row;
+    margin-top: -170px;
 }
 
-
-
 .video {
-    width: 1280px;
-    height: 720px;
+    width: 1080px;
+    height: 660px;
     padding-left: 100px;
     padding-top: 60px;
 }
@@ -223,10 +223,10 @@ header{
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-left: 50px;
-    padding-top: 20px;
-    
-    
+    margin-left: 60px;
+    padding-top: 50px;
+    text-align: justify;
+    padding-right: 100px;
 }
 
 .paso{
@@ -235,24 +235,69 @@ header{
 }
 
 .paso img {
-    width: 80px;
-    height: 75px;
-    margin-top: 25px;
+    width: 40px;
+    height: 35px;
+    margin-top: 30px;
     
 }
 
 .paso h2{
     color: #b565ff;
-    margin-top: 35px;
+    margin-top: 30px;
     margin-left: 10px;
-    font-size: 35px;
+    font-size: 30px;
+    font-weight: 800;
+    margin-bottom: 10px;
+}
+.pasos p{
+    color: #b565ff;
+    font-size: 1.2rem;
+    font-weight: 300;
 }
 
 /* Ejemplos */
 
 .ejemplos{
     background-color: #b565ff;
-    height: 100vh;
+    height: 160vh;
+}
+
+.titulo_practica{
+    display: flex;
+    margin-left: 100px;
+    padding-top: 60px;
+    
+}
+
+.titulo_practica img {
+    width: 100px;
+    height: 95px;
+    margin-top: 15px;
+    
+}
+
+.titulo_practica h2{
+    color: #b565ff;
+    margin-top: 35px;
+    margin-left: 50px;
+}
+
+.ejemplo_container{
+    padding: 50px;
+    display: flex;
+    text-align: center;
+}
+
+.ejemplo1{
+    padding-right: 20px;
+    width: 50%;
+}
+
+.ejemplo1 h3{
+    margin-bottom: 40px;
+    font-size: 35px;
+    color: #b565ff;
+    
 }
 
 /* Procesamiento */
@@ -262,25 +307,120 @@ header{
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+    
 }
 
-/* Conclusion */
+.titulo_api{
+    display: flex;
+    margin-left: 100px;
+    padding-top: 250px;
+   
+}
 
-.conclusion{
-    background-color: white;
-    height: 100vh;
+.titulo_api img {
+    width: 100px;
+    height: 95px;
+    margin-top: 15px;
+    
+}
+
+.titulo_api h2{
+    color: white;
+    margin-top: 35px;
+    margin-left: 50px;
+ 
+}
+
+.container_proc{
+   display: flex;
+   justify-content: space-evenly;
+   width: 97.5%;
+}
+
+.ejemplo_api{
+    padding: 50px;
+    display: flex;
+    text-align: center;
+    width: 100%;
+    justify-content: space-evenly;
+    
+}
+
+.ejemplo1api{
+    padding-right: 45px;
+    width: 50%;
+    margin-top: 40px;
+}
+
+.ejemplo1api h3{
+    margin-bottom: 30px;
+    font-size: 35px;
+    color: white;
+    
+}
+
+.api_vertical{
+    padding: 20px;
+    text-align: left;
+}
+
+.api_horizontal {
+    display: flex;
+}
+
+.api_horizontal h5{
+    font-size: 22px;
+    margin-bottom: 20px;
+}
+
+.api_horizontal p{
+    color: #b565ff;
+    font-size: 19px;
+}
+
+.api_horizontal img{
+    width: 45%;
+    
+}
+
+.titulo_conclusion{
+    display: flex;
+    margin-left: 100px;
+    padding-top: 100px;
+    
+}
+
+.titulo_conclusion img {
+    width: 100px;
+    height: 95px;
+    margin-top: 15px;
+    
+}
+
+.titulo_conclusion h2{
+    color: white;
+    margin-top: 35px;
+    margin-left: 50px;
+ 
+}
+
+.conclusion_p{
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 80px;
+    font-size: 26px;
 }
 
 /* Footer */
 
 footer{
-    background-color: #b565ff;
+    background-color: white;
     height: 6vh;
     text-align: center;
 }
 
 footer p{
-    color: white;
+    color: #b565ff;
     font-family: 'WorkSans';
     font-size: 30px;
     transform: translateY(30%);
